Include navigation in sticky header to avoid jump

--- a/polaris-react/src/components/DataTable/DataTable.scss
+++ b/polaris-react/src/components/DataTable/DataTable.scss
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    padding: var(--p-space-4) var(--p-space-2);
+    padding: var(--p-space-4) var(--p-space-2) 0;
 
     @media #{$p-breakpoints-md-up} {
       justify-content: flex-end;
